trying to fix a bug on iOS - the calculator is not being positioned relative to the bottom of the screen

--- a/styles.css
+++ b/styles.css
@@ -253,12 +253,12 @@ body {
 	}*/
 
 	#calculator {
-		position: absolute;
+		position: fixed;
 		top: 0px;
 		left: 0px;
 		bottom: 0px;
 		right: 0px;
-		overflow: hidden;
+		/*overflow: hidden;*/
 		/*background: lime;*/
 		/*margin: 0px;*/
 		border-radius: 0px;
